# Cubes3D

./: .clang-format  .gitignore  CMakeLists.txt  Cubes3D.pro  FeEdit.cpp  FeEdit.h  SceneHandler.h  aabb.cpp  aabb.h  camera.cpp  camera.h  cubes3d.cpp  cubes3d.h  cubes3d.ui  dispayobject.cpp  dispayobject.h  displayobject.cpp  displayobject.h  fesyntaxhighlighter.cpp  fesyntaxhighlighter.h  fewrap.cpp  fewrap.h  geometry.h  main.cpp  overlaypainter.cpp  overlaypainter.h  plyimport.cpp  plyimport.h  ray.cpp  ray.h  renderobject.cpp  renderobject.h  shader.qrc  util.h  view3d.cpp  view3d.h
assets/: colors.fe  crystal.ply  cube.ply  example.fe  example.json
assets/base/: colors.fe  fancy.fe
fe/: fe.h
overlay/: mainmenubutton.cpp  mainmenubutton.h  overlayobject.cpp  overlayobject.h
shader/: fshader.glsl  overlay.frag  overlay.vert  vshader.glsl
